aside + main start

--- a/index.html
+++ b/index.html
@@ -49,6 +49,23 @@
             <span class="menu__line second-line"></span>
         </div>
     </header>
+    <div class="container">
+        <aside class="aside-menu">
+            <a href="#" class="aside-menu__link active-link">Напутственное слово</a>
+            <a href="#" class="aside-menu__link hovered">Сетка</a>
+            <a href="#" class="aside-menu__link">Типография</a>
+            <a href="#" class="aside-menu__link">UI</a>
+        </aside>
+        <div class="main">
+            <div class="main__heading">
+                <h1 class="title">
+                    Тестовое задание
+                </h1>
+                <span class="level">Уровень: junior</span>
+            </div>
+        </div>
+    </div>
+
     <footer class="footer container">
         <span>Победа! 😜</span>
     </footer>
