--- a/index.html
+++ b/index.html
@@ -63,6 +63,81 @@
                 </h1>
                 <span class="level">Уровень: junior</span>
             </div>
+            <div class="main__content">
+                <p class="preface">Привет! Твоё тестовое задание — грамотно заверстать эту прекрасную страничку. В шапке
+                    страницы укажи своё ФИО, так всем будет удобнее. В менюхе под иконкой бургером мы хотели бы также
+                    видеть твои данные. Ну что, поехали?</p>
+                <section class="main__grid grid section">
+                    <h2 class="subtitle">Сетка</h2>
+                    <p class="section__text">Задание предполагает адаптивную вёрстку. Используется 3 состояния
+                        в зависимости от устройства. Сетка «резиновая» — переменной ширины.</p>
+                    <section class="grid__division">
+                        <h3 class="grid__subtitle">Десктоп (1200+)</h3>
+                        <ul class="grid__table table">
+                            <li class="table__content-width table__item">Контент
+                                <p class="table__item__value">1072–1312</p>
+                            </li>
+                            <li class="table__columns table__item">Колонок
+                                <p class="table__item__value">12</p>
+                            </li>
+                            <li class="table__column-width table__item">Ширина колонки
+                                <p class="table__item__value">60-80</p>
+                            </li>
+                            <li class="table__column-gap table__item">Межколонник
+                                <p class="table__item__value">32</p>
+                            </li>
+                        </ul>
+                        <div class="grid__image">
+                            <img src="./images/png/desktop.png" alt="Desktop grid">
+                        </div>
+                    </section>
+                    <section class="grid__division">
+                        <h3 class="grid__subtitle">Планшет (736+)</h3>
+                        <ul class="grid__table table">
+                            <li class="table__content-width table__item">Контент
+                                <p class="table__item__value">672–928</p>
+                            </li>
+                            <li class="table__columns table__item">Колонок
+                                <p class="table__item__value">8</p>
+                            </li>
+                            <li class="table__column-width table__item">Ширина колонки
+                                <p class="table__item__value">56-68</p>
+                            </li>
+                            <li class="table__column-gap table__item">Межколонник
+                                <p class="table__item__value">32</p>
+                            </li>
+                        </ul>
+                        <div class="grid__image">
+                            <img src="./images/png/tablet.png" alt="table grid">
+                        </div>
+                    </section>
+                    <section class="grid__division">
+                        <h3 class="grid__subtitle">Телефон (320+)</h3>
+                        <ul class="grid__table table">
+                            <li class="table__content-width table__item">Контент
+                                <p class="table__item__value">296–424</p>
+                            </li>
+                            <li class="table__columns table__item">Колонок
+                                <p class="table__item__value">4</p>
+                            </li>
+                            <li class="table__column-width table__item">Ширина колонки
+                                <p class="table__item__value">56-88</p>
+                            </li>
+                            <li class="table__column-gap table__item">Межколонник
+                                <p class="table__item__value">24</p>
+                            </li>
+                        </ul>
+                        <div class="grid__image">
+                            <img src="./images/png/mobile.png" alt="mobile grid">
+                        </div>
+                    </section>
+                </section>
+                <section class="section main__typography">
+                    <h2 class="subtitle">Типография</h2>
+                    <p class="section__text">Используется шрифт Graphik. На телефонах стили типографики переопределяются
+                    </p>
+                </section>
+            </div>
         </div>
     </div>
 
