--- a/index.html
+++ b/index.html
@@ -132,10 +132,16 @@
                         </div>
                     </section>
                 </section>
-                <section class="section main__typography">
+                <section class="section main__typography typography">
                     <h2 class="subtitle">Типография</h2>
                     <p class="section__text">Используется шрифт Graphik. На телефонах стили типографики переопределяются
                     </p>
+                    <div class="typography__content">
+                        <ul class="typography__tabs">
+                            <li class="tab active-tab" id="desktop">Десктоп</li>
+                            <li class="tab" id="mobile">Телефон</li>
+                        </ul>
+                    </div>
                 </section>
             </div>
         </div>
