--- a/index.html
+++ b/index.html
@@ -243,14 +243,15 @@
                             </div>
                         </div>
                     </section>
-                    <section class="ui__division">
+                    <section class="ui__division selectors">
                         <h3 class="ui__subtitle">Выпадающий список</h3>
                         <span class="ui__division__description">Компонент состоит из текстового поля и выпадающей
                             подсказки</span>
                         <div class="ui__selects">
                             <div class="ui__select">
                                 <div class="select-box">
-                                    <span class="selected-item">Выберите что-нибудь</span>
+                                    <span class="selected-item"></span>
+                                    <span class="custom-placeholder">Выберите что-нибудь</span>
                                     <i class="arrow"></i>
                                 </div>
                                 <ul class="ui__select__options options">
